k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: voiceowl-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: voiceowl
  template:
    metadata:
      labels:
        app: voiceowl
    spec:
      containers:
        - name: api
          image: YOUR_DOCKERHUB_USERNAME/voiceowl-api:latest
          ports:
            - containerPort: 3000
