k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: voiceowl-api
spec:
  type: ClusterIP
  selector:
    app: voiceowl
  ports:
    - port: 80
      targetPort: 3000
